Added config tests.