@@ -169,7 +169,7 @@
                     <forkCount>1C</forkCount>
                     <reuseForks>true</reuseForks>
 
-                    <threadCount>4</threadCount>
+                    <threadCount>3</threadCount>
                     <perCoreThreadCount>true</perCoreThreadCount>
                     <parallel>methods</parallel>
 
@@ -194,14 +194,37 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>${maven.surefire.plugin.version}</version>
-                        <configuration>
+                        <configuration combine.self="override">
                             <parallel>none</parallel>
                             <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M
                                 -Dhazelcast.version.check.enabled=false
                                 -Dhazelcast.mancenter.enabled=false
                                 -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
                             </argLine>
                             <groups>com.hazelcast.test.annotation.NetworkTest</groups>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>all</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>${maven.surefire.plugin.version}</version>
+                        <configuration combine.self="override">
+                            <parallel>none</parallel>
+                            <argLine>-Xms512m -Xmx512m -XX:MaxPermSize=128M
+                                -Dhazelcast.version.check.enabled=false
+                                -Dhazelcast.mancenter.enabled=false
+                                -Dhazelcast.logging.type=none
+                                -Dhazelcast.test.use.network=true
+                            </argLine>
                         </configuration>
                     </plugin>
                 </plugins>
